; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvdimm/extr_core.c_nvdimm_map_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvdimm/extr_core.c_nvdimm_map_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvdimm_map = type { i32, %struct.nvdimm_bus* }
%struct.nvdimm_bus = type { i32 }

@nvdimm_map_release = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @nvdimm_map_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvdimm_map_put(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nvdimm_map*, align 8
  %4 = alloca %struct.nvdimm_bus*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.nvdimm_map*
  store %struct.nvdimm_map* %6, %struct.nvdimm_map** %3, align 8
  %7 = load %struct.nvdimm_map*, %struct.nvdimm_map** %3, align 8
  %8 = getelementptr inbounds %struct.nvdimm_map, %struct.nvdimm_map* %7, i32 0, i32 1
  %9 = load %struct.nvdimm_bus*, %struct.nvdimm_bus** %8, align 8
  store %struct.nvdimm_bus* %9, %struct.nvdimm_bus** %4, align 8
  %10 = load %struct.nvdimm_bus*, %struct.nvdimm_bus** %4, align 8
  %11 = getelementptr inbounds %struct.nvdimm_bus, %struct.nvdimm_bus* %10, i32 0, i32 0
  %12 = call i32 @nvdimm_bus_lock(i32* %11)
  %13 = load %struct.nvdimm_map*, %struct.nvdimm_map** %3, align 8
  %14 = getelementptr inbounds %struct.nvdimm_map, %struct.nvdimm_map* %13, i32 0, i32 0
  %15 = load i32, i32* @nvdimm_map_release, align 4
  %16 = call i32 @kref_put(i32* %14, i32 %15)
  %17 = load %struct.nvdimm_bus*, %struct.nvdimm_bus** %4, align 8
  %18 = getelementptr inbounds %struct.nvdimm_bus, %struct.nvdimm_bus* %17, i32 0, i32 0
  %19 = call i32 @nvdimm_bus_unlock(i32* %18)
  ret void
}

declare dso_local i32 @nvdimm_bus_lock(i32*) #1

declare dso_local i32 @kref_put(i32*, i32) #1

declare dso_local i32 @nvdimm_bus_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
